--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
   <link type="text/css" rel="stylesheet" href="style.css">
   <script src="scripts/global.js"></script>
+  <script src="scripts/factory.js"></script>
+  <script src="scripts/service.js"></script>
   <script src="scripts/controller.js"></script>
   <script src="scripts/directive.js"></script>
 </head>
