--- a/index.html
+++ b/index.html
@@ -15,16 +15,21 @@
 <body>
   <h1>Ajax request sender</h1>
   <form ng-controller="senderCtrl"  ng-init="initializeVariables()">
+    <div class='alert alert-danger' ng-show="errors">
+      <ul>
+        <li ng-repeat="err in errors">{{ err }}</li>
+      </ul>
+    </div>
     <div class='form-group'>
       <label for="requestUrl">Request URL</label>
       <input required type="text" ng-model="requestUrl" />
     </div>
     <div class='form-group'>
       <label for="indentWidth">Indentation width in pixels</label>
-      <input required type="text" ng-model="indentWidth" />
+      <input required type="text" ng-model="styleOptions.indentWidth" />
     </div>
     <div class='form-group'>
-    <label for="requestType">Reqquest Type / HTTP Verb</label>
+    <label for="requestType">Request Type / HTTP Verb</label>
       <select required ng-model='requestType'>
         <option ng-repeat="x in possibleRequestTypes" value="{{ x }}" ng-bind="x.toUpperCase()"></option>
       </select>
@@ -42,7 +47,7 @@
     </div>
     <button ng-click="submit()" onclick="return false">Submit</button>
     <div class="message-displayer">
-      <p ng-repeat="message in messages" ng-style="message.style()">{{ message.content }}</p>     
+      <p ng-repeat="message in messages" ng-style="message.style(styleOptions)">{{ message.toString() }}</p>     
     </div>  
   </form> 
 </body>
