--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html ng-app="app">
+<html>
 <head>
   <meta charset='UTF-8'>
   <!-- load CDN -->
@@ -14,41 +14,54 @@
 </head>
 <body>
   <h1>Ajax request sender</h1>
-  <form ng-controller="senderCtrl"  ng-init="initializeVariables()">
-    <div class='alert alert-danger' ng-show="errors">
-      <ul>
-        <li ng-repeat="err in errors">{{ err }}</li>
-      </ul>
+  <div class='container' ng-app="app">
+    <div class='row' ng-controller="senderCtrl">
+      <div class='col-sm-6'>
+        <form ng-init="initializeVariables()">
+          <div class='alert alert-danger' ng-show="errors">
+            <ul>
+              <li ng-repeat="err in errors">{{ err }}</li>
+            </ul>
+          </div>
+          <div class='form-group'>
+            <label for="requestUrl">Request URL</label>
+            <input required type="text" ng-model="requestUrl" />
+          </div>
+          <div class='form-group'>
+            <label for="indentWidth">Indentation width in pixels</label>
+            <input required type="text" ng-model="styleOptions.indentWidth" />
+          </div>
+          <div class='form-group'>
+          <label for="requestType">Request Type / HTTP Verb</label>
+            <select required ng-model='requestType'>
+              <option ng-repeat="x in possibleRequestTypes" value="{{ x }}" ng-bind="x.toUpperCase()"></option>
+            </select>
+          </div>
+          <div class='form-group'>
+            <label for="requestParameters">Request parameters</label>
+            <ul>
+              <li ng-repeat="param in requestParameters">
+                <input placeholder="key of parameter" type="text" ng-model="param.key" focus-me="true" />
+                <input placeholder="value of parameter" type="text" ng-model="param.value" />
+                <button ng-click="removeRequestParams($index)">Delete Parameter</button>
+              </li> 
+            </ul>
+            <button ng-click="addRequestParams()" onclick="return false">Add Request Parameter</button>
+          </div>
+          <button ng-click="submit()" onclick="return false">Submit</button>
+          <div class="message-displayer">
+            <p ng-repeat="message in messages" ng-style="message.style(styleOptions)">{{ message.toString() }}</p>     
+          </div>  
+        </form> 
+      </div>
+      <div class='col-sm-6'>
+        <div ng-bind="responseData"></div>
+      </div>
+        
     </div>
-    <div class='form-group'>
-      <label for="requestUrl">Request URL</label>
-      <input required type="text" ng-model="requestUrl" />
-    </div>
-    <div class='form-group'>
-      <label for="indentWidth">Indentation width in pixels</label>
-      <input required type="text" ng-model="styleOptions.indentWidth" />
-    </div>
-    <div class='form-group'>
-    <label for="requestType">Request Type / HTTP Verb</label>
-      <select required ng-model='requestType'>
-        <option ng-repeat="x in possibleRequestTypes" value="{{ x }}" ng-bind="x.toUpperCase()"></option>
-      </select>
-    </div>
-    <div class='form-group'>
-      <label for="requestParameters">Request parameters</label>
-      <ul>
-        <li ng-repeat="param in requestParameters">
-          <input placeholder="key of parameter" type="text" ng-model="param.key" focus-me="true" />
-          <input placeholder="value of parameter" type="text" ng-model="param.value" />
-          <button ng-click="removeRequestParams($index)">Delete Parameter</button>
-        </li> 
-      </ul>
-      <button ng-click="addRequestParams()" onclick="return false">Add Request Parameter</button>
-    </div>
-    <button ng-click="submit()" onclick="return false">Submit</button>
-    <div class="message-displayer">
-      <p ng-repeat="message in messages" ng-style="message.style(styleOptions)">{{ message.toString() }}</p>     
-    </div>  
-  </form> 
+  </div>
+  
+
+
 </body>
 </html>
