--- a/index.html
+++ b/index.html
@@ -44,11 +44,31 @@
             </select>
           </div>
           <div class='form-group'>
+            <label for="requestHeaders">Request Headers</label>
+            <p>Common headers will be used if not specified</p>
+            <ul style="padding-left : 0px">
+              <form class="form-inline">
+                <li ng-repeat="param in requestHeaders" style="list-style-type : none">
+                  <p>params {{ $index + 1 }}</p>
+                  <div class='form-group'>
+                    <input placeholder="key of your header {{ $index + 1 }}" type="text" ng-model="param.key" class="form-control form-inline"/>
+                  </div>
+                  <div class='form-group'>
+                    <input placeholder="value of your header {{ $index + 1 }}" type="text" ng-model="param.value" class="form-control form-inline"/>
+                  </div>
+                  <div class='form-group'>
+                    <button ng-click="removeRequestHeader($index)" class="btn btn-danger">Delete Header</button>
+                  </div>
+                </li> 
+              </form>
+            </ul> 
+          </div>
+          <div class='form-group'>
             <label for="requestParameters">Request parameters</label>
             <p>If your request does not permit the sending of any parameters (eg: GET / DELETE requet), your paramteres will be entered as a query string. Note, it will be escaped, eg: special characters will be converted to relevant hex code.</p>
-            <ul style="padding-left : 0px">
-              <form class="form-inlines">
-                <li ng-repeat="param in requestParameters" style="list-style-type : none">
+            <ul style="padding-left : 0px" ng-show="requestParameters">
+              <li ng-repeat="param in requestParameters" style="list-style-type : none">
+                <form class="form-inline">
                   <p>params {{ $index + 1 }}</p>
                   <div class='form-group'>
                     <input placeholder="key of your parameter {{ $index + 1 }}" type="text" ng-model="param.key" class="form-control form-inline"/>
@@ -59,12 +79,13 @@
                   <div class='form-group'>
                     <button ng-click="removeRequestParams($index)" class="btn btn-danger">Delete Parameter</button>
                   </div>
-                </li> 
-              </form>
+                </form>
+              </li> 
             </ul>
           </div>
           <button ng-click="submit()" onclick="return false" class="btn btn-success">Submit</button>
           <button ng-click="addRequestParams()" onclick="return false" class="btn btn-info" style="margin-left : 10px">Add Request Parameter</button>  
+          <button ng-click="addRequestHeaders()" onclick="return false" class="btn btn-warning" style="margin-left : 10px">Add Request Header</button>  
         </form> 
       </div>
       <div class='col-sm-6'>
